--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -1,3 +1,7 @@
-{% for post in posts %}
-  <p>{{ post.title }}<p>
-{% endfor %}
+{% extends 'base.html' %}
+
+{% block contents %}
+  {% for post in posts %}
+    <p>{{ post.title }}<p>
+  {% endfor %}
+{% endblock contents %}
