一覧から詳細画面へのリンクを追加

--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -2,6 +2,6 @@
 
 {% block contents %}
   {% for post in posts %}
-    <p>{{ post.title }}<p>
+    <p><a href="{% url 'posts:posts-detail' post.id %}">{{ post.title }}</a><p>
   {% endfor %}
 {% endblock contents %}
