--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -5,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Django Blog</title>
+  <link href="{% static 'css/tailwind.min.css' %}" rel="stylesheet">
   {% block style %}{% endblock style %}
 </head>
 <body>
