--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,18 @@
   {% block style %}{% endblock style %}
 </head>
 <body>
+  <header class="w-full bg-blue-800 mb-6">
+    <div class="container mx-auto py-6">
+      <a href="{% url 'posts:posts-list' %}" class="text-4xl font-bold text-white">Django Blog</a>
+    </div>
+  </header>
+
   {% block contents %}{% endblock contents %}
+
+  <footer class="w-full bg-blue-800 mt-10 py-4">
+    <p class="text-sm text-white text-center">Copyright &copy; 2021 Django Blog All Rights Reserved.</p>
+  </footer>
+
   {% block script %}{% endblock script %}
 </body>
 </html>
